<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_live_location"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/live_location" />
        </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/about_us" />
    </group>
</menu>