<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_interface"
    tools:context=".Interface">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:fontFamily="@font/lobster"
        android:gravity="center"
        android:text="@string/enter_as"
        android:textColor="@color/teal_700"
        android:textSize="35sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="@drawable/round_button"
        android:text="@string/parent"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/round_button"
        android:text="@string/teacher"
        android:textAllCaps="false" />

</RelativeLayout>