<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="800dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/android_teacher"
        tools:context=".register_teacher">

        <TextView
            android:id="@+id/register_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/full_name_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_teacher"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_name_teacher"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp1"
            android:layout_width="110dp"
            android:layout_height="56dp"
            android:layout_below="@+id/email_teacher"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="#30ffffff" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_teacher"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_teacher"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_teacher"
            android:layout_margin="10dp"
            android:background="#30ffffff"
            android:drawableStart="@drawable/ic_baseline_lock_open_24"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_teacher"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableStart="@drawable/ic_baseline_lock_open_24"
            android:drawablePadding="20dp"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_teacher"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/register2" />
        <!--        android:textAllCaps="false"/>-->

        <TextView
            android:id="@+id/already_user_login_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_btn_teacher"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/already_user_login"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/already_user_login_teacher"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>